--- a/menu.html
+++ b/menu.html
@@ -1,10 +1,15 @@
-<hmtl>
+<html>
 <head>
-  <title>Quantum Leap Menu</title>
+	<title> Quantum Leap Menu</title>
+</head>
+<body>
+<head>
+  <title> Quantum Leap Menu</title>
  </head>
+</body>
 <body>
 <h3>Quantum Leap Menu</h3>
-<
+<p>A short walk from Washington Square Park, Quantum Leap has been the local favorite of Greenwich Village’s vegetarian residents for many years now. No matter what type of cuisine or diet you prefer, there are plenty of options for you. The courteous staff and laid-back atmosphere are perfect for a quick bite to eat or a long relaxing meal. Quantum Leap prides itself on providing affordable dining without sacrificing preparation or taste. They offer a number of lunch and dinner specials that will satisfy your hunger and leave you feeling great. Come see what makes Quantum Leap the signature place to find great vegetarian food in the village!</p>
 <p>Open 12:00 PM to 9:45 PM, 226 Thompson St New York, NY 10012, (646) 963-9654</p>
 <a href="http://http://www.quantumleapnewyork.com/">Full Website</a>
 <h2>Appetizers</h2>
